Corrected word spacing

--- a/personal.css
+++ b/personal.css
@@ -586,7 +586,7 @@ p.coming-soon{
   }
   h4.intro{
     font-size: 18px;
-    margin-top: 0;
+    margin-top: 5px;
   }
   h5.description{
     font-size: 17px;
@@ -612,7 +612,7 @@ p.coming-soon{
     background-size: 162px 50px;
     height: 50px;
     width: 162px;
-    padding: 15px 0;
+    padding: 14px 0;
   }
 
   .stash-description{
@@ -624,7 +624,7 @@ p.coming-soon{
   }
 
   .stash-link{
-    font-size: 15px;
+    font-size: 16px;
   }
 }
 
